@startuml Scripture Memorizer

class Program {
    + Main(args : string[]) : void
    + LoadScripturesFromFile(filename : string) : List<Scripture>
}

class ScriptureReference {
    - _book : string
    - _chapter : int
    - _startVerse : int
    - _endVerse : int?
    + ScriptureReference(reference : string)
    + ScriptureReference(book : string, chapter : int, startVerse : int, endVerse : int?)
    + GetBook() : string
    + GetChapter() : int
    + GetStartVerse() : int
    + GetEndVerse() : int?
    + ToString() : string
}

class Scripture {
    - _reference : ScriptureReference
    - _words : List<Word>
    + Scripture(reference : ScriptureReference, text : string)
    + GetReference() : ScriptureReference
    + HideRandomWords(count : int) : void
    + ToString() : string
    + AllWordsHidden() : bool
}

class Word {
    - _text : string
    - _isHidden : bool
    + Word(text : string)
    + Hide() : void
    + GetText() : string
    + IsHidden : bool
    + ToString() : string
}

' Relationships
Program --> "0..*" Scripture : loads
ScriptureReference <-- Scripture : uses
Scripture "1" *-- "many" Word : contains

@enduml